Add NEXT_PUBLIC_APP_INSTANCE env var for CIAM/IAM branding
- Add APP_TITLE constant derived from NEXT_PUBLIC_APP_INSTANCE env var
- CIAM Athena displays "Athena CIAM", IAM Athena displays "Athena IAM"
- Replace all "Ory Admin" references with dynamic APP_TITLE
- Update page title in layout.tsx metadata
- Update GitHub link to OlympusOSS repository
- Set NEXT_PUBLIC_APP_INSTANCE=CIAM/IAM in Docker Compose

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -368,6 +368,7 @@ services:
       - IAM_KRATOS_PUBLIC_URL=http://iam-kratos:7000
       - IAM_KRATOS_ADMIN_URL=http://iam-kratos:7001
       - NEXT_PUBLIC_IAM_KRATOS_PUBLIC_URL=http://localhost:4100
+      - NEXT_PUBLIC_APP_INSTANCE=CIAM
     volumes:
       - ../Athena:/app
       - /app/node_modules
@@ -397,6 +398,7 @@ services:
       - IAM_KRATOS_PUBLIC_URL=http://iam-kratos:7000
       - IAM_KRATOS_ADMIN_URL=http://iam-kratos:7001
       - NEXT_PUBLIC_IAM_KRATOS_PUBLIC_URL=http://localhost:4100
+      - NEXT_PUBLIC_APP_INSTANCE=IAM
     volumes:
       - ../Athena:/app
       - /app/node_modules
