Fix Athena container startup issues
- Remove middleware.ts: Next.js 16 renamed middleware to proxy, so having
  both proxy.ts and middleware.ts causes a conflict error
- Add separate .next volume mounts for CIAM and IAM Athena containers
  to prevent lock file conflicts from shared source mount

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -372,6 +372,7 @@ services:
     volumes:
       - ../Athena:/app
       - /app/node_modules
+      - ciam-athena-next:/app/.next
     networks:
       - intranet
     depends_on:
@@ -402,6 +403,7 @@ services:
     volumes:
       - ../Athena:/app
       - /app/node_modules
+      - iam-athena-next:/app/.next
     networks:
       - intranet
     depends_on:
@@ -464,3 +466,5 @@ networks:
 
 volumes:
   postgres:
+  ciam-athena-next:
+  iam-athena-next:
