Add QuickStart guide with macOS setup instructions
- New QuickStart.md with Homebrew prerequisites, 3-step setup,
  test credentials, port reference, and troubleshooting
- Link to QuickStart added at top of README.md
- PgAdmin password updated from admin to admin123!

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - '4000:80'
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@athena.dev
-      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_DEFAULT_PASSWORD=admin123!
       - PGADMIN_CONFIG_SERVER_MODE=True
     volumes:
       - type: bind
